# techno-economic-stes-database

./: README.md  pyproject.toml
notebooks/: CAPEX_OPEX_database_STES.ipynb  Heat_Loss_Simulation_of_PTES.ipynb
src/stes_tools/: __init__.py  loss_simulation.py  temperature_map.py
