[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "stes-tools"
version = "0.1.0"
description = "STES modeling package"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "matplotlib"
]

[project.optional-dependencies]
dev = [
    "jupyter",
    "pytest",
    "black"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]